--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@stylexjs/eslint-plugin": "^0.4.1",
+    "@stylexjs/rollup-plugin": "^0.4.1",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
